# TraceRoots-htu

./: .gitignore  LICENSE
TraceRoots/: app.json
backend/: .env.example  database.py  main.py  models.py  requirements.txt  schemas.py  traceroots.db
backend/ai/: blockchain.py  fraud_detection.py  freshness_analysis.py  hash_ai.py  prompt.py  test.py  test_analysis.py  vectorize.py
backend/blockchain/: TraceRootsABI.json  traceRoots.service.js
backend/routes/: ai.py  auth.py  batches.py  blockchain.py  consumer.py  farmers.py  processor.py  regulator.py  surplus.py
backend/utils/: ai_utils.py  blockchain_utils.py  qr_utils.py  tts_utils.py  video_utils.py
frontend/: .env  app.json  package-lock.json  package.json
frontend/.next/: build-manifest.json  react-loadable-manifest.json  trace
frontend/app/: _layout.tsx  firstpage.tsx  index.tsx  login.tsx  signup.tsx
frontend/components/: Button.tsx  Footer.js  InputField.tsx  Modal.js  Navbar.js  RoleSelector.tsx
frontend/context/: AuthContext.tsx  LanguageContext.tsx
frontend/lib/: mockData.js
frontend/services/: api.ts  offlineSync.ts
traceroots-blockchain/traceroots-blockchain/: package-lock.json
traceroots-blockchains/: README.md  package-lock.json  package.json
traceroots-blockchains/contracts/: TraceRoots.sol
traceroots-blockchains/scripts/: deploy.js  (+1 more)
traceroots-solana/: .gitignore  Anchor.toml  README.md  anchor.bat  build.bat  package-lock.json  package.json  test.bat  tsconfig.json
traceroots-solana/programs/traceroots/: Cargo.toml
traceroots-solana/programs/traceroots/src/: lib.rs
(+157 files in other folders)
