[package]
name = "traceroots"
version = "0.1.0"
description = "TraceRoots batch tracking on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "traceroots"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
